bug fix after release

--- a/source/rank_for_easy.json
+++ b/source/rank_for_easy.json
@@ -1,1 +1,1 @@
-{"r": 16.955, "handsome": 6.15, "k": 5.337}
+{"Russell": 4.71, "Handsome": 6.15, "Alpha": 5.337, "Joy": 4.93, "Butterfly": 6.86, "Happy": 8, "kkk": 584.61}
