Fixed bugs caused by code optimize

--- a/source/rank_for_easy.json
+++ b/source/rank_for_easy.json
@@ -1,1 +1,1 @@
-{"Russell": 4.71, "Handsome": 6.15, "Alpha": 5.337, "Joy": 4.93, "Butterfly": 6.86, "Happy": 8, "kkk": 584.61, "r": 4.7943999999999996}
+{"Russell": 4.71, "Handsome": 6.15, "Alpha": 5.337, "Joy": 4.93, "Butterfly": 6.86, "Happy": 8, "kkk": 584.61, "r": 5.345}
